fix sharing icon's alignment and add padding to the unshare icon

--- a/core/css/share.css
+++ b/core/css/share.css
@@ -69,7 +69,7 @@
 }
 
 #shareWithList .sharingOptionsGroup .popovermenu {
-	right: 12px;
+	right: 44px;
 }
 
 #shareWithList .shareOption {
